[gd_scene load_steps=5 format=3 uid="uid://c7okn5ros3fk6"]

[ext_resource type="Script" path="res://Attack/attack.gd" id="1_8qgih"]
[ext_resource type="Texture2D" uid="uid://02pe1ees1s2j" path="res://Attack/Javelin/javelin0.png" id="2_opq1o"]
[ext_resource type="Script" path="res://Attack/move_behavior.gd" id="3_mugur"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gj8kv"]
size = Vector2(4, 58)

[node name="Attack" type="Node2D"]
z_index = 1000
script = ExtResource("1_8qgih")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("2_opq1o")

[node name="HitBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_gj8kv")

[node name="LifetimeTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="MoveBehavior" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_mugur")

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
